--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -31,7 +31,7 @@
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background:#00CCFF;
+  background:#2F4F4F;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -45,7 +45,7 @@
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background:#00CCFF;
+  background:#2F4F4F;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -56,7 +56,7 @@
   cursor: pointer;
 }
 .form button:hover,.form button:active,.form button:focus {
-  background:#00CCFF;
+  background:#2F4F4F;
 }
 .form .message, #label {
 /*   margin: 15px 0 0; */
@@ -67,7 +67,7 @@
   text-align: center;
 }
 .form .message a {
-  color:#00CCFF;
+  color:#2F4F4F;
   text-decoration: none;
   text-align: center;
 }
@@ -108,16 +108,15 @@
   color: #EF3B3A;
 }
 body {
-  background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
+  background: white; /* fallback for old browsers */
+  background: -webkit-linear-gradient(right, white, #8DC26F);
+  background: -moz-linear-gradient(right, white, #8DC26F);
+  background: -o-linear-gradient(right, white, #8DC26F);
+  background: linear-gradient(to left, white, #8DC26F);
  
   font-family: 'Poppins', sans-serif;
 
   color: #48494a;
-  background-image: url(../images/body-bg.jpg);
 
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
