add login / logout

--- a/src/main/resources/templates/admin/include/header.html
+++ b/src/main/resources/templates/admin/include/header.html
@@ -16,7 +16,7 @@
 			<!-- header section strats -->
 
 			<div style="background:#2F4F4F" class="container">
-				<nav  style="background:#2F4F4F" class="navbar navbar-expand-lg custom_nav-container ">
+				<nav style="background:#2F4F4F" class="navbar navbar-expand-lg custom_nav-container ">
 					<a class="navbar-brand" th:href="@{/admin}">
 
 						<span>
@@ -30,7 +30,7 @@
 
 
 								<li>
-									<a th:href="@{/signout}"><span class="glyphicon glyphicon-log-out"></span>
+									<a id="btnLogout"><span class="glyphicon glyphicon-log-out"></span>
 										Đăng xuất</a>
 								</li>
 
