--- a/src/main/resources/templates/admin/EmployeeManagement.html
+++ b/src/main/resources/templates/admin/EmployeeManagement.html
@@ -31,7 +31,7 @@
 	<div class="col-md-10 animated bounce">
 		<h3 class="page-header">Quản lý Nhân viên</h3>
 
-		<button class="btn btn-success btnThemTaiKhoan">Thêm mới</button>
+		<button class="btn btn-success btnThemNhanVien">Thêm mới</button>
 		<hr>
 		<div class="form-group form-inline">
 			<label for="sel1"><strong>Lọc Nhân viên:</strong> </label> <select id="vaiTro" class="form-control">
@@ -52,6 +52,7 @@
 					<th>Mã thuế</th>
 					<th>Mã phòng</th>
 					<th>Trưởng phòng</th>
+					<th>Lương</th>
 					<th></th>
 				</tr>
 
@@ -62,9 +63,9 @@
 		</table>
 	</div>
 	<div class="row col-md-6">
-		<form class="taiKhoanForm" id="form">
+		<form class="nhanVienForm" id="form">
 			<div>
-				<div class="modal fade" id="taiKhoanModal" tabindex="-1" role="dialog"
+				<div class="modal fade" id="nhanVienModal" tabindex="-1" role="dialog"
 					aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
 					<div class="modal-dialog" role="document">
 						<div class="modal-content">
@@ -84,24 +85,27 @@
 										name="email" required />
 								</div>
 								<div class="form-group">
-									<label for="name">Ngày sinh</label> <input type="password" class="form-control"
-										name="password" required />
+									<label for="name">Ngày sinh</label> <input type="dateOfBirth" class="form-control"
+										name="dateOfBirth" required />
 								</div>
 								<div class="form-group">
 									<label for="name">Mã thuế</label> <input type="taxcode" class="form-control"
 										name="taxcode" required />
 								</div>
+
+								<div class="form-group">
+									<label for="name">Lương</label> <input type="salary" class="form-control"
+										name="salary" required />
+								</div>
+
 								<div class="form-group">
 									<label for="name">Chọn Mã phòng:</label>
-
-									<th:block th:each="role : ${listRole}">
-
-										<label class="radio-inline">
-											<input type="radio" name="vaiTro" th:value="${role.value}" th:text="${role}"
-												checked="checked">
-
-										</label>
-									</th:block>
+									<select id="departmentId" name="departmentId">
+										<option value="HR">Nhân sự</option>
+										<option value="ACC">Tài chính</option>
+										<option value="IT">CNTT</option>
+									</select>
+					
 
 								</div>
 
