--- a/src/main/resources/templates/admin/EmployeeManagement.html
+++ b/src/main/resources/templates/admin/EmployeeManagement.html
@@ -84,10 +84,11 @@
 									<label for="name">Email</label> <input type="email" class="form-control"
 										name="email" required />
 								</div>
-								<div class="form-group">
-									<label for="name">Ngày sinh</label> <input type="dateOfBirth" class="form-control"
-										name="dateOfBirth" required />
-								</div>
+								<label for="start">Ngày sinh:</label>
+								<input type="date" id="start" placeholder="ngày sinh" name="dateOfBirth" value="2021-11-22" min="1900-01-01"
+									max="2021-12-31">
+									
+									
 								<div class="form-group">
 									<label for="name">Mã thuế</label> <input type="taxcode" class="form-control"
 										name="taxcode" required />
@@ -105,13 +106,13 @@
 										<option value="ACC">Tài chính</option>
 										<option value="IT">CNTT</option>
 									</select>
-					
+
 
 								</div>
 
 								<div class="modal-footer">
 									<button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
-									<input class="btn btn-primary" id="btnSubmit" type="button" value="Xác nhận" />
+									<input class="btn btn-primary" id="btnAddSubmit" type="button" value="Xác nhận" />
 								</div>
 							</div>
 						</div>
