--- a/src/main/resources/templates/admin/EmployeeManagement.html
+++ b/src/main/resources/templates/admin/EmployeeManagement.html
@@ -20,6 +20,12 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link th:href="@{/css/adminheader.css}" rel="stylesheet" />
 
+	<style type="text/css">
+		th {
+			text-align: center;
+		}
+	</style>
+
 </head>
 
 <body>
@@ -53,7 +59,7 @@
 					<th>Mã phòng</th>
 					<th>Trưởng phòng</th>
 					<th>Lương</th>
-					<th></th>
+					<th>Thao tác</th>
 				</tr>
 
 			</thead>
@@ -77,26 +83,26 @@
 							</div>
 							<div class="modal-body">
 								<div class="form-group">
-									<label for="name">Name</label> <input type="name" class="form-control" name="name"
-										required />
+									<label for="name">Name</label> <input type="name" id="empName" class="form-control"
+										name="name" required />
 								</div>
 								<div class="form-group">
-									<label for="name">Email</label> <input type="email" class="form-control"
-										name="email" required />
+									<label for="name">Email</label> <input type="email" id="empEmail"
+										class="form-control" name="email" required />
 								</div>
 								<label for="start">Ngày sinh:</label>
-								<input type="date" id="start" placeholder="ngày sinh" name="dateOfBirth" value="2021-11-22" min="1900-01-01"
-									max="2021-12-31">
-									
-									
+								<input type="date" placeholder="ngày sinh" id="empDateOfBirth" name="dateOfBirth"
+									value="2021-11-22" min="1900-01-01" max="2021-12-31">
+
+
 								<div class="form-group">
-									<label for="name">Mã thuế</label> <input type="taxcode" class="form-control"
-										name="taxcode" required />
+									<label for="name">Mã thuế</label> <input id="empTaxCode" dateOfBirthtype="taxcode"
+										class="form-control" name="taxCode" required />
 								</div>
 
 								<div class="form-group">
-									<label for="name">Lương</label> <input type="salary" class="form-control"
-										name="salary" required />
+									<label for="name">Lương</label> <input id="empSalary" type="salary"
+										class="form-control" name="salary" required />
 								</div>
 
 								<div class="form-group">
@@ -113,6 +119,7 @@
 								<div class="modal-footer">
 									<button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
 									<input class="btn btn-primary" id="btnAddSubmit" type="button" value="Xác nhận" />
+									<input class="btn btn-primary" id="btnSaveSubmit" type="button" value="Lưu" />
 								</div>
 							</div>
 						</div>
