--- a/src/main/resources/templates/admin/EmployeeManagement.html
+++ b/src/main/resources/templates/admin/EmployeeManagement.html
@@ -118,8 +118,9 @@
 									<label for="name">Chọn Mã phòng:</label>
 									<select id="departmentId" name="departmentId">
 										<option value="HR">Nhân sự</option>
-										<option value="ACC">Tài chính</option>
-										<option value="IT">CNTT</option>
+										<option value="AC">Kế Toán</option>
+										<option value="IT">Lập trình</option>
+										<option value="BA">Phân tích nghiệp vụ</option>
 									</select>
 								</div>
 
