--- a/src/main/resources/templates/admin/Audit.html
+++ b/src/main/resources/templates/admin/Audit.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="ISO-8859-1">
-    <title>Giám sát nhân viên</title>
+    <title>GiÃ¡m sÃ¡t chá»‰nh sá»­a</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <script th:src="@{/js/jquery-1.js}"></script>
 
@@ -35,7 +35,7 @@
 
 <div class="col-md-1"></div>
 <div class="col-md-10 animated bounce">
-    <h3 class="page-header">Giám sát nhân viên</h3>
+    <h3 class="page-header">GiÃ¡m sÃ¡t chá»‰nh sá»­a</h3>
 
     <table class="table table-hover taiKhoanTable" style="text-align: center;">
         <thead>
